[metadata]
name = interweb
version = attr: interweb.version.VERSION
description = Python client library for the Interweb API
long_description = file: README.md
long_description_content_type = text/markdown
author = Oleh Astappiev
author_email = astappiev@l3s.de
url = https://github.com/l3s-learnweb/interweb
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  requests >= 2.20  # to get the patch for CVE-2018-18074

[options.extras_require]
dev =
  pytest == 6.*
  pytest-mock

[options.packages.find]
exclude =
  tests
  tests.*
